--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
 :root {
   --paragraph-text-color: #757575;
   --title-text-color: #212121;
