--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,23 @@ html {
   --hero-team-bg-color: #f5f4fa;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -37,10 +54,24 @@ body {
   list-style: none;
   text-decoration: none;
 }
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* outline: 2px solid tomato; */
+  margin: 0 auto;
+}
 /* -----------------HEADER------------- */
 
 .header {
   background-color: var(--bg-color);
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-logo {
@@ -49,20 +80,48 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  margin-right: 93px;
+  display: block;
 }
 
 .logo-half {
   color: var(--logo-blue-color);
 }
 
-/* .active {
+.header-contacts {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.header-list,
+.transfer {
+  display: flex;
+  align-items: center;
+}
+
+.header-item {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.header-list .header-item + .header-item {
+  margin-left: 50px;
+}
+
+/* .header-right-zero {
+  margin-right: 0px;
+} ещ' один вариант убрать последний марджен правый в лишках*/
+
+.active {
   color: var(--aсcent-color);
-} */
+}
 
 .header-link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   cursor: pointer;
@@ -74,13 +133,24 @@ body {
   color: var(--aсcent-color);
 }
 
-.header-email,
+.header-email {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--header-contact-color);
+  margin-left: 344px;
+  display: block;
+}
+
 .header-tel {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--header-contact-color);
+  margin-left: 50px;
+  display: block;
 }
 
 .footer-contacts-map:hover,
@@ -96,7 +166,8 @@ body {
 /* ----------------HERO---------------- */
 
 .hero {
-  background: var(--hero-bg-color);
+  background-color: var(--hero-bg-color);
+  text-align: center;
 }
 
 .hero-title {
@@ -107,6 +178,8 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-title-color);
+  padding-bottom: 30px;
+  padding-top: 200px;
 }
 
 .hero-btn {
@@ -117,6 +190,15 @@ body {
   letter-spacing: 0.06em;
   color: var(--btn-white-color);
   background: var(--aсcent-color);
+  border-radius: 4px;
+  padding: 10px 32px;
+  margin: 0px auto;
+  display: inline-block;
+  margin-bottom: 200px;
+}
+
+.excellence {
+  background-color: #f5f5f5;
 }
 
 .visually-hidden {
@@ -132,6 +214,17 @@ body {
   margin: -1px;
 }
 
+.hero-item {
+  display: flex;
+  align-items: flex-start;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.hero-item-list {
+  margin-right: 30px;
+}
+
 .hero-text-title {
   font-weight: 700;
   font-size: 14px;
@@ -139,6 +232,7 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--title-text-color);
+  margin-bottom: 10px;
 }
 
 .hero-text-item {
@@ -146,13 +240,32 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--paragraph-text-color);
+  width: 270px;
+}
+
+/* -----------------Work examples -----------*/
+.hero-example {
+  background-color: #f5f5f5;
+}
+.hero-example-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-bottom: 50px;
+}
+
+.hero-example-item {
+  margin-right: 30px;
+  padding-bottom: 94px;
 }
 
 .hero-team {
   background: var(--hero-team-bg-color);
 }
 
-.hero-example-title,
 .hero-team-title {
   font-weight: 700;
   font-size: 36px;
@@ -160,23 +273,38 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  margin-bottom: 50px;
+  padding-top: 94px;
+}
+
+.hero-team-list {
+  padding-bottom: 94px;
+}
+
+.hero-team-item {
+  background-color: var(--bg-color);
+  border-radius: 0px 0px 4px 4px;
+  margin-right: 30px;
 }
 
 .hero-team-person {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 
 .hero-team-text {
   font-size: 16px;
-  line-height: 1.19px;
+  line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--paragraph-text-color);
+  padding-bottom: 30px;
 }
 
 /* ----------------FOOTER--------------- */
@@ -191,6 +319,9 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+  margin-top: 60px;
+  padding-bottom: 20px;
+  display: inline-flex;
 }
 
 .footer-contacts {
@@ -207,9 +338,20 @@ body {
 
 .footer-contacts-link {
   font-size: 14px;
-  line-height: 1.71px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--footer-contacts-color);
+}
+
+.footer-contacts-item {
+  margin-bottom: 9px;
+}
+
+.contacts-margin-zero {
+  margin: 0px;
+}
+.footer-contacts-list {
+  padding-bottom: 60px;
 }
 
 /* ----------------PORTFOLIO--------------- */
@@ -224,6 +366,20 @@ body {
   color: var(--filter-btn-color);
   background: var(--filter-btn-bg);
   cursor: pointer;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  padding: 6px 22px;
+}
+
+.filter-list-btm {
+  display: flex;
+  justify-content: center;
+  padding-top: 94px;
+  padding-bottom: 50px;
+}
+
+.filter-list-btm .filter-item + .filter-item {
+  margin-left: 8px;
 }
 
 .filter-btn:hover,
@@ -243,6 +399,32 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+  margin: 20px 24px 4px 24px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-bottom: 94px;
+}
+
+.portfolio-examples {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #eeeeee;
+}
+
+/* .portfolio-link {
+  display: block;
+} */
+
+.portfolio-examples:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.portfolio-examples:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
 }
 
 .portfolio-text {
@@ -250,4 +432,5 @@ body {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--paragraph-text-color);
+  margin: 0px 24px 20px 24px;
 }
